用了知乎的开源库，增加了照片选择，以及其他界面改了乱七八糟的布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
             android:label="@string/title_activity_eg7_brunch_feeling_detail"
             android:theme="@style/AppTheme" />
         <activity android:name=".Eg9QRScanner" />
-        <activity android:name=".Eg10File"></activity>
+        <activity android:name=".Eg10File" />
+        <activity android:name=".Eg11Views"></activity>
     </application>
 
 </manifest>
