--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ android {
         compile 'com.tencent.mars:mars-core:1.1.9'
         compile 'com.android.support:design:25.3.1'
         compile 'com.squareup.okhttp:okhttp:2.4.0'
+        //知乎图片选择
+        compile 'com.zhihu.android:matisse:0.4.3'
+        compile 'com.github.bumptech.glide:glide:3.7.0'
+
         testCompile 'junit:junit:4.12'
 
     }
